MarcoKitTests/TestData/error/simple.marco
--before
foo

--after
0-2: 'false' expected
